--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,9 +24,9 @@
             </a>
           </li>
           <li class="list-group-item active">
-            <a class="text-light" href="mailto:teodor.nilseng@gmail.com">
+            <a class="text-light" href="mailto:contact@pureokrs.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
-              teodor.nilseng@gmail.com
+              contact@pureokrs.com
             </a>
           </li>
         </ul>
